--- a/cms/web/static/output.css
+++ b/cms/web/static/output.css
@@ -883,34 +883,23 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .dropdown-menu {
-  pointer-events: none;
-  visibility: hidden;
+  display: none;
   position: absolute;
   right: 0px;
   top: 100%;
   margin-top: 0.5rem;
   min-width: 180px;
-  --tw-translate-y: 0.25rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   border-radius: 1rem;
   border-width: 1px;
   border-color: rgb(255 255 255 / 0.1);
   background-color: rgb(0 0 0 / 0.7);
   padding: 0.25rem;
-  opacity: 0;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 200ms;
   -webkit-backdrop-filter: blur(24px);
           backdrop-filter: blur(24px);
 }
 
 .dropdown-menu.is-open {
-  pointer-events: auto;
-  visibility: visible;
-  --tw-translate-y: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  opacity: 1;
+  display: block;
 }
 
 .dropdown-item {
